crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-align-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[width="100%",cols="<20%,>20%,^30%,30%",options="header",]
|===
|l |r |c |d
|1 |2 |3 |4
|===
