crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols="<,>,^,",options="header",]
|===
|l |r |c |d
|1 |2 |3 |4
|===
