crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.Captioned and attributed
[cols=",",options="header",]
|===
|h1 |h2
|a |b
|===
