crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-cell-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",options="header",]
|===
|name |notes
|alpha a|
first paragraph

* one
* two

|===
