crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-cell-boundary-space.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",,",options="header",]
|===
|col1 |col2 |col3
| a |spaced text |trailing
|===
