crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-empty-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",,,",options="header",]
|===
|A |B |C |D
a|

 a|

 a|
*
*
 |ok
|===
