crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-empty-header.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",options="header",]
|===
| |
|a |b
|===
