crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-foot.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",options="header,footer",]
|===
|h1 |h2
|a |b
|sum |3
|===
