crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-grid-spans.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[width="83%",cols="42%,22%,18%,18%",options="header",]
|===
|Header row, column 1 |Header 2 |Header 3 |Header 4
|body row 1, column 1 |column 2 |column 3 |column 4
|body row 2 3+|Cells may span columns.
|body row 3 .2+|Cells may span rows. 2.2+a|
* Cells.
* Contain.
* Blocks.

|body row 4
|===
