crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-grid-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[width="19%",cols="29%,71%",options="header",]
|===
|a |b
|1 |2
|===
