crates/carta/tests/snapshots/golden_writer__asciidoc__table__table-headerless-plain.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
[cols=",",]
|===
|a |b
|c |d
|===
